--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,4 +1,6 @@
-numpy==1.18.4
-scipy==1.5.4
-plotly==4.14.0
-nilearn==0.7.1
+numpy>=1.21.2
+wordcloud>=1.8.1
+pandas>=1.3.3
+seaborn>=0.11.2
+scipy>=1.7.1
+scikit-learn>=0.24.2
