Import of the original notebook in jupyter book format.

--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -1,3 +1,5 @@
-- file: 00-simple_markdown
-- file: 01-simple_notebook
-- file: 02-simple_myst
+format: jb-book
+root: intro
+chapters:
+- file: papers
+- file: conclusion
