--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,6 +1,8 @@
-numpy>=1.21.2
-wordcloud>=1.8.1
-pandas>=1.3.3
-seaborn>=0.11.2
-scipy>=1.7.1
-scikit-learn>=0.24.2
+numpy==1.21.2
+wordcloud==1.8.1
+pandas==1.3.3
+seaborn==0.11.2
+scipy==1.7.1
+scikit-learn==0.24.2
+plotly-express==0.4.1
+imageio==2.9.0
