--- a/content/_config.yml
+++ b/content/_config.yml
@@ -49,4 +49,11 @@ sphinx:
   config:
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
+
 #######################################################################################
+# parse settings
+parse:
+  myst_enable_extensions:
+    # don't forget to list any other extensions you want enabled,
+    # including those that are enabled by default!
+    - html_image
