--- a/content/_config.yml
+++ b/content/_config.yml
@@ -36,7 +36,7 @@ html:
 launch_buttons:
   notebook_interface        : jupyterlab  # The interface interactive links will activate ["classic", "jupyterlab"]
   binderhub_url             : https://mybinder.org  # The URL of the BinderHub (e.g., https://mybinder.org)
-  thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
+  thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
 
 repository:
   url                       : https://github.com/pbellec/editorial_parcellation  # The URL to your book's repository
