--- a/content/_config.yml
+++ b/content/_config.yml
@@ -35,8 +35,8 @@ html:
 # Launch button settings
 launch_buttons:
   notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url             : https://binder.conp.cloud  # The URL of the Neurolibre BinderHub 
-  thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
+  binderhub_url             : https://binder.conp.cloud  # The URL of the Neurolibre BinderHub
+  thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
 
 repository:
   url                       : https://github.com/pbellec/editorial_parcellation  # The URL to your book's repository
