--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,8 +1,8 @@
-jupyter-book==0.15.1
-matplotlib==3.8.0
-numpy==1.26.1
-repo2data==2.9.1
-scikit-learn==1.3.1
-scipy==1.11.3
-seaborn==0.13.0
-wordcloud==1.9.2
+jupyter-book
+matplotlib
+numpy
+repo2data
+scikit-learn
+scipy
+seaborn
+wordcloud
