Reverting back to classic interface.

--- a/content/_config.yml
+++ b/content/_config.yml
@@ -34,7 +34,7 @@ html:
 #######################################################################################
 # Launch button settings
 launch_buttons:
-  notebook_interface        : jupyterlab  # The interface interactive links will activate ["classic", "jupyterlab"]
+  notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
   binderhub_url             : https://binder.conp.cloud  # The URL of the Neurolibre BinderHub
   thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
 
