Fix typo, add bibliography to the book

--- a/content/_config.yml
+++ b/content/_config.yml
@@ -57,3 +57,6 @@ parse:
     # don't forget to list any other extensions you want enabled,
     # including those that are enabled by default!
     - html_image
+
+bibtex_bibfiles:
+  - ../paper.bib
